Ticket #32402: Fix overflow rules on active navigation to prevent body scrolling when nav is open

--- a/website/static/website/css/modules/global/_navigation.scss
+++ b/website/static/website/css/modules/global/_navigation.scss
@@ -1,8 +1,10 @@
 // Navigation
 
-body.navigation--active {
-  max-height: 100vh;
-  overflow: hidden;
+html.navigation--active {
+  &,body {
+    max-height: 1px;
+    overflow: hidden;
+  }
 }
 
 .navigation--label,
